--- a/second/pom.xml
+++ b/second/pom.xml
@@ -8,11 +8,10 @@
   <build>
     <plugins>
       <plugin>
-      <!--   <groupId>org.jboss.as.plugins</groupId>
+        <groupId>org.jboss.as.plugins</groupId>
          <artifactId>jboss-as-maven-plugin</artifactId>
          <version>7.9.Final</version>
 	 <configuration>
-	 -->
 		<hostname>192.168.11.88</hostname>
 	        <port>9999</port>
                 <username>Jothi</username>
