--- a/second/pom.xml
+++ b/second/pom.xml
@@ -26,7 +26,7 @@
                 <jbossHome>/root/jboss-eap-6.4</jbossHome>
                 <fileName>/root/var/lib/go-agent/pipelines/Sample/second/target/Trailpro-1.0.war</fileName>
           </configuration>
-	  <executions>
+	 <!-- <executions>
               <execution>
 		  <id>deploy</id>
                   <phase>package</phase>
@@ -35,6 +35,7 @@
                   </goals>
                </execution>
           </executions>
+	-->
         </plugin>
     </plugins>
   </build>
