--- a/pom.xml
+++ b/pom.xml
@@ -45,10 +45,10 @@
                 <password>Jothi@123</password>
 		<domain>
 		  <server-groups>
-			<server-group>main-server-group</server-group>
+			<server-group>ServerGrp-1</server-group>
 		  </server-groups>
 		  <profiles>
-			<profile>full</profile>
+			<profile>full-ha</profile>
 		  </profiles>
 		</domain>
                 <jbossHome>/root/jboss-eap-6.4</jbossHome>
