--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
                 <jbossHome>/root/jboss-eap-6.4</jbossHome>
                 <fileName>/root/var/lib/go-agent/pipelines/Sample1/target/Trailpro-1.0.war</fileName>
           </configuration>
-	  <executions>
+	<!--  <executions>
               <execution>
 		  <id>deploy</id>
                   <phase>package</phase>
@@ -63,6 +63,7 @@
                   </goals>
                </execution>
           </executions>
+	-->
         </plugin>
     </plugins>
   </build>
