--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,32 @@
                 <jbossHome>/root/jboss-eap-6.4</jbossHome>
                 <fileName>/var/lib/go-agent/pipelines/Sample1/target/Trailpro-1.0.war</fileName>
           </configuration>
-	<!--  <executions>
+	  <executions>
+              <execution>
+		  <id>deploy</id>
+                  <phase>package</phase>
+                  <goals>
+                     <goal>undeploy</goal>
+                  </goals>
+               </execution>
+	  </executions>
+	      <configuration>
+		<hostname>192.168.11.88</hostname>
+	        <port>9999</port>
+                <username>Jothi</username>
+                <password>Jothi@123</password>
+		<domain>
+		  <server-groups>
+			<server-group>ServerGrp-1</server-group>
+		  </server-groups>
+		  <profiles>
+			<profile>full-ha</profile>
+		  </profiles>
+		</domain>
+                <jbossHome>/root/jboss-eap-6.4</jbossHome>
+                <fileName>/var/lib/go-agent/pipelines/Sample1/target/Trailpro-1.0.war</fileName>
+          </configuration>
+	 <executions>
               <execution>
 		  <id>deploy</id>
                   <phase>package</phase>
@@ -63,7 +88,7 @@
                   </goals>
                </execution>
           </executions>
-	-->
+	
         </plugin>
     </plugins>
   </build>
