--- a/pom.xml
+++ b/pom.xml
@@ -38,57 +38,53 @@
          <groupId>org.jboss.as.plugins</groupId>
          <artifactId>jboss-as-maven-plugin</artifactId>
          <version>7.9.Final</version>
-	 <configuration>
-		<hostname>192.168.11.88</hostname>
-	        <port>9999</port>
-                <username>Jothi</username>
-                <password>Jothi@123</password>
-		<domain>
-		  <server-groups>
-			<server-group>other-server-group</server-group>
-		  </server-groups>
-		  <profiles>
-			<profile>full-ha</profile>
-		  </profiles>
-		</domain>
-                <jbossHome>/root/jboss-eap-6.4</jbossHome>
-                <fileName>/var/lib/go-agent/pipelines/Sample1/target/Trailpro-1.0.war</fileName>
-          </configuration>
-	  <executions>
-              <execution>
-		  <id>deploy</id>
-                  <phase>package</phase>
-                  <goals>
-                     <goal>undeploy</goal>
-                  </goals>
-               </execution>
-	  </executions>
-	   <!--   <configuration>
-		<hostname>192.168.11.88</hostname>
-	        <port>9999</port>
-                <username>Jothi</username>
-                <password>Jothi@123</password>
-		<domain>
-		  <server-groups>
-			<server-group>ServerGrp-1</server-group>
-		  </server-groups>
-		  <profiles>
-			<profile>full-ha</profile>
-		  </profiles>
-		</domain>
-                <jbossHome>/root/jboss-eap-6.4</jbossHome>
-                <fileName>/var/lib/go-agent/pipelines/Sample1/target/Trailpro-1.0.war</fileName>
-          </configuration>
 	 <executions>
-              <execution>
-		  <id>deploy</id>
-                  <phase>package</phase>
-                  <goals>
-                     <goal>deploy</goal>
-                  </goals>
-               </execution>
-          </executions>
-	-->
+                                                        <execution>
+                                                                <id>undeploy</id>
+                                                                <phase>clean</phase>
+                                                                <goals>
+                                                                        <goal>undeploy</goal>
+                                                                </goals>
+                                                                <configuration>
+                                                                        <domain>
+                                                                                <server-groups>
+                                                                                        <server-group>other-server-group</server-group>
+                                                                                </server-groups>
+                                                                                <profiles>
+                                                                                        <profile>full-ha</profile>
+                                                                                </profiles>
+                                                                        </domain>
+                                                                        <hostname>192.168.11.88</hostname>
+                                                                        <port>9999</port>
+                                                                        <username>Jothi</username>
+                                                                        <password>Jothi@123</password>
+                                                                        <ignoreMissingDeployment>true</ignoreMissingDeployment>
+                                                                </configuration>
+                                                        </execution>
+                                                      <!--  <execution>
+                                                                <id>deploy</id>
+                                                                <phase>package</phase>
+                                                                <goals>
+                                                                        <goal>deploy</goal>
+                                                                </goals>
+                                                                <configuration>
+                                                                        <domain>
+                                                                                <server-groups>
+                                                                                        <server-group>ServerGrp-1</server-group>
+                                                                                </server-groups>
+                                                                                <profiles>
+                                                                                        <profile>full-ha</profile>
+                                                                                </profiles>
+                                                                        </domain>
+                                                                        <hostname>192.168.11.88</hostname>
+                                                                        <port>9999</port>
+                                                                        <username>Jothi</username>
+                                                                        <password>Jothi@123</password>
+                                                                </configuration>
+                                                        </execution>
+-->
+		 		</executions>
+
         </plugin>
     </plugins>
   </build>
