--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,8 @@
          <groupId>org.jboss.as.plugins</groupId>
          <artifactId>jboss-as-maven-plugin</artifactId>
          <version>7.9.Final</version>
-	<!-- <executions>
-            <execution>
+	 <executions>
+          <!--  <execution>
                <id>undeploy</id>
                <phase>clean</phase>
                <goals>
