--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,8 @@
          <groupId>org.jboss.as.plugins</groupId>
          <artifactId>jboss-as-maven-plugin</artifactId>
          <version>7.9.Final</version>
-	 <executions>
-          <!--  <execution>
+	 <!-- <executions>
+           <execution>
                <id>undeploy</id>
                <phase>clean</phase>
                <goals>
@@ -61,29 +61,30 @@
      	       </configuration>
              </execution>
 -->
-             <execution>
-                  <id>deploy</id>
+         <configuration>
+		<hostname>192.168.11.88</hostname>
+	        <port>9999</port>
+                <username>Jothi</username>
+                <password>Jothi@123</password>
+		<domain>
+		  <server-groups>
+			<server-group>ServerGrp-1</server-group>
+		  </server-groups>
+		  <profiles>
+			<profile>full-ha</profile>
+		  </profiles>
+		</domain>
+                <jbossHome>/root/jboss-eap-6.4</jbossHome>
+                <fileName>/root/var/lib/go-agent/pipelines/Sample1/target/Trailpro-1.0.war</fileName>
+          </configuration>
+	  <executions>
+              <execution>
+		  <id>deploy</id>
                   <phase>package</phase>
                   <goals>
                      <goal>deploy</goal>
                   </goals>
-                  <configuration>
-			<hostname>192.168.11.88</hostname>
-                        <port>9999</port>
-                        <username>Jothi</username>
-                        <password>Jothi@123</password>
-                      <domain>
-                          <server-groups>
-                              <server-group>ServerGrp-1</server-group>
-                          </server-groups>
-                      <profiles>
-                               <profile>full-ha</profile>
-                      </profiles>
-			  </domain>
-			<jbossHome>/root/jboss-eap-6.4</jbossHome>
-               		<fileName>/root/var/lib/go-agent/pipelines/Sample1/target/Trailpro-1.0.war</fileName>
-                    </configuration>
-                 </execution>
+               </execution>
 	 </executions>
         </plugin>
     </plugins>
