--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
                </execution>
 	      </executions>
      </plugin>
-     <plugin>
+  <!--   <plugin>
          <groupId>org.jboss.as.plugins</groupId>
          <artifactId>jboss-as-maven-plugin</artifactId>
          <version>7.9.Final</version>
@@ -92,6 +92,7 @@
                </execution>
           </executions>
         </plugin>
+-->
     </plugins>
   </build>
 </project>
