--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
 		  </profiles>
 		</domain>
           </configuration>
-	  <executions>
+	<!--  <executions>
               <execution>
 		  <id>undeploy</id>
                   <phase>clean</phase>
@@ -62,6 +62,7 @@
                </execution>
 	      </executions>
      </plugin>
+-->
      <plugin>
          <groupId>org.jboss.as.plugins</groupId>
          <artifactId>jboss-as-maven-plugin</artifactId>
